<resources>
    <string name="app_name">Naloxalocate</string>
    <!--Main Blurb-->
    <string name="timer_blurb">Send a text message to an emergency contact after several minutes in case of overdose.</string>
    <string name="find_blurb">Find opioid overdose reversal drug near you.</string>
    <string name="register_blurb">Register as a Naloxone provider.</string>
    <!--Main Buttons-->
    <string name="timer_btn_text">Start a Timer</string>
    <string name="find_btn_text">Find Naloxone</string>
    <string name="provide_btn_text">Provide Naloxone</string>
    <!--Timer Layout-->
    <string name="contact_number_label">Contact Number</string>
    <string name="contact_name_label">Emergency Contact Name</string>
    <string name="sms_message_label">Emergency Message</string>
    <string name="time_duration_label">Set Timer Duration</string>
    <string name="save_timer_details_label">Save for next time</string>
    <string name="start_timer_btn_text"> Start Timer </string>
    <!--Countdown Layout-->
    <string name="stop_alarm_btn_text">Stop Alarm</string>
    <string name="sms_sent_to_name">"SMS Sent to "</string>
    <string name="countdown_finished_text">00:00</string>
    <!--Find Activity-->
    <string name="find_empty_list_text">No Nearby Carriers</string>
    <!--Provide Activity-->
    <string name="gps_off_btn_text">Turn Off GPS Tracking</string>
    <string name="gps_on_btn_text">Turn On GPS Tracking</string>

</resources>
